--- a/k3s.yml
+++ b/k3s.yml
@@ -2,7 +2,6 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: dankpods.net-ingress
-  namespace: dankpods
 spec:
   entryPoints:
    - web
@@ -19,7 +18,6 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: dankpods.net-ingress
-  namespace: dankpods
 spec:
   entryPoints:
     - websecure
@@ -38,7 +36,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: dankpods-server
-  namespace: dankpods
 spec:
   selector:
     app: dankpods-server
@@ -54,7 +51,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: dankpods-server
-  namespace: dankpods
 spec:
   selector:
     matchLabels:
@@ -70,6 +66,9 @@ spec:
         image: dankpods:latest
         ports:
         - containerPort: 80
+        imagePullSecrets:
+        - name: harbor-key
+          namespace: kube-system
 
 ---
 
@@ -77,7 +76,6 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: dankpods.net
-  namespace: dankpods
 spec:
   commonName: dankpods.net
   dnsNames:
