Refer to local registry

--- a/k3s.yml
+++ b/k3s.yml
@@ -63,7 +63,7 @@ spec:
     spec:
       containers:
       - name: dankpods
-        image: dankpods:latest
+        image: harbor.dotglitch.dev/library/dankpods:latest
         ports:
         - containerPort: 80
       imagePullSecrets:
