--- a/k3s.yml
+++ b/k3s.yml
@@ -28,7 +28,7 @@ spec:
         - name: dankpods-server
           port: 80
   tls:
-    secretName: dankpods.net-tls
+    secretName: dev.dankpods.net-tls
 
 ---
 
@@ -74,14 +74,14 @@ spec:
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: dankpods.net
+  name: dev.dankpods.net
 spec:
-  commonName: dankpods.net
+  commonName: dev.dankpods.net
   dnsNames:
     - dankpods.net
   issuerRef:
     kind: ClusterIssuer
     name: letsencrypt-stage
-  secretName: dankpods.net-tls
+  secretName: dev.dankpods.net-tls
 
 
