--- a/k3s.yml
+++ b/k3s.yml
@@ -1,4 +1,4 @@
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: dankpods.net-ingress
@@ -14,7 +14,7 @@ spec:
 
 ---
 
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: dankpods.net-secure-ingress
